zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__home__tests__home_actions.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: text(&buffer)
---
  ≡ .                                                                                                                                       
                                                                                                                                            
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │                                                                                                                                      │  
  │    ▄  ▄      Zeta Code v0.1.0                                                                                                        │  
  │  ▗█▛██▜█▖                                                                                                                            │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.                                                                     │  
  │    ▝  ▘                                                                                                                              │  
  │            > Resume session                                                                                                          │  
  │              Manage sessions                                                                                                         │  
  │              Settings                                                                                                                │  
  │              Help and shortcuts                                                                                                      │  
  │              Quit                                                                                                                    │  
  │                                                                                                                                      │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
  Type a task to begin, or use Tab to choose an action.                                                                                     
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ > Build anything                                                                                                                     │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                                                            
  Enter select  ·  ↑↓ actions  ·  Esc input                                                                           ⏸ ask permissions on
