zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__home__tests__home_draft.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, terminal.width, terminal.height))"
---
  ≡ .                                                                                                                                       
                                                                                                                                            
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │                                                                                                                                      │  
  │    ▄  ▄      Zeta Code v0.1.0                                                                                                        │  
  │  ▗█▛██▜█▖                                                                                                                            │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.                                                                     │  
  │    ▝  ▘                                                                                                                              │  
  │              Resume session                                                                                                          │  
  │              Manage sessions                                                                                                         │  
  │              Settings                                                                                                                │  
  │              Help and shortcuts                                                                                                      │  
  │              Quit                                                                                                                    │  
  │                                                                                                                                      │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯  
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
                                                                                                                                            
  Type a task to begin, or use Tab to choose an action.                                                                                     
  ╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ > 检 查 项 目 结 构                                                                                                                        │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                                                                            
  Enter send  ·  Tab actions  ·  / commands                                                                           ⏸ ask permissions on
