zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__home__tests__home_short.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: text(&buffer)
---
  ≡ .                                   
                                        
  ╭──────────────────────────────────╮  
  │  Zeta Code v0.1.0                │  
  │> Quit                            │  
  ╰──────────────────────────────────╯  
  Type a task · Tab actions             
  ╭──────────────────────────────────╮  
  │ > Build anything                 │  
  ╰──────────────── Automatic model ─╯  
                                        
  Enter select    ⏸ ask permissions on
