zeta-code/tui/src/app/fullscreen/snapshots/zeta_tui__app__fullscreen__home__tests__home_submission_failed.snap
---
source: zeta-code/tui/src/app/fullscreen/home_tests.rs
expression: "text(&render(&app, 80, 24))"
---
  ≡ .                                                                           
                                                                                
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │                                                                          │  
  │    ▄  ▄      Zeta Code v0.1.0                                            │  
  │  ▗█▛██▜█▖                                                                │  
  │  ▝▜████▛▘    Start a task below, or continue a previous session.         │  
  │    ▝  ▘                                                                  │  
  │              Resume session                                              │  
  │              Manage sessions                                             │  
  │              Settings                                                    │  
  │              Help and shortcuts                                          │  
  │              Quit                                                        │  
  │                                                                          │  
  ╰──────────────────────────────────────────────────────────────────────────╯  
                                                                                
                                                                                
                                                                                
  Could not create session                                                      
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > [Pasted Content 1500 chars]                                            │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  Tab actions  ·  / commands               ⏸ ask permissions on
